--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.0"
-markov = "1.1.0"
+serde = { version = "1.0.115", features = ["derive"] }
+serde_json = "1.0.53"
