moved configuration and added mysql section
moved the configuration under the root module and added configuration section for mysql

--- a/config.json
+++ b/config.json
@@ -16,5 +16,12 @@
                 ["th", "rck", "te", "rn", "ns", "en", "ll"]
             ]
         }
-    ]
+    ],
+    "mysql_configuration": {
+        "address": "localhost",
+        "port": 3306,
+        "user": "local",
+        "password": "password",
+        "schema": "test"
+    }
 }
