--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 repository = "https://github.com/elasticrash/spawnflake"
 license = "MIT"
 readme = "README.md"
-keywords = ["data-generator", "database tools"]
+keywords = ["data-generator", "database-tools"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
