--- a/config.json
+++ b/config.json
@@ -78,5 +78,12 @@
         "user": "local",
         "password": "password",
         "schema": "test"
-    }
+    },
+    "postgres_configuration":{
+        "address": "localhost",
+        "port": 5432,
+        "user": "postgres",
+        "password": "example",
+        "schema": "public"
+    } 
 }
