--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "spawnflakes"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["stefano <s.kouroupis@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-spawnflake = "0.1.9"
+spawnflake = "0.2.0"
+clap = "2.33.3"
