--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: depedencies
-      run: apt-get install -y libssl-dev
+      run: sudo apt-get install -y libssl-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
