--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["data-generator", "database-tools"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8.0"
 serde = { version = "1.0.115", features = ["derive"] }
 serde_json = "1.0.53"
