--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "spawnflakes"
-version = "0.2.1"
-authors = ["stefano <s.kouroupis@gmail.com>"]
+version = "0.2.3"
+authors = ["stefano <manekato@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
