--- a/config.json
+++ b/config.json
@@ -107,6 +107,13 @@
 					3.19,
 					8.99
 				]
+			},
+			{
+				"name": "temperature",
+				"rules": [
+					-20.1,
+					30.9
+				]
 			}
 		]
     },
