--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "spawnflake"
-description = "random data generator"
+description = "Generate pattern based random data for mysql"
 version = "0.2.5"
-authors = ["stefanos.kouroupis <manekato@gmail.com>"]
-edition = "2018"
+authors = ["Stefanos Kouroupis <s.kouroupis@voidmachines.com>"]
+edition = "2021"
 repository = "https://github.com/elasticrash/spawnflake"
 license = "MIT"
 readme = "README.md"
-keywords = ["data-generator", "database-tools"]
+keywords = ["data-generator", "database-tools", "integration-testing"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8.0"
