optimisations and code sanity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ license = "MIT"
 readme = "README.md"
 keywords = ["data-generator", "database-tools", "integration-testing"]
 
+[profile.release]
+debug = true
+
 [dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8.0"
