added config for new supported types

--- a/config.json
+++ b/config.json
@@ -123,6 +123,20 @@
 					"1601364309",
 					"1701364309"
 				]
+			},
+			{
+				"name": "dob",
+				"rules": [
+					"323601095",
+					"639133895"
+				]
+			},
+			{
+				"name": "tob",
+				"rules": [
+					"1712098800",
+					"1712185199"
+				]
 			}
 		]
     },
